fixed login on mobile5

--- a/src/App.css
+++ b/src/App.css
@@ -35,47 +35,6 @@ input {
   box-sizing: border-box;
 }
 
-/* navbar */
-.nav-bar {
-  padding: 10px 30px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #42AECCA6;
-  color: #88DDA0;
-  height: 60px;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  z-index: 1;
-  box-shadow: var(--div-shadows);
-  box-sizing: border-box;
-}
-
-.nav-bar span {
-  display: flex;
-  color: white;
-}
-
-.nav-bar span>h1 {
-  color: black;
-  margin: auto;
-}
-
-.nav-bar span>img {
-  color: black;
-  margin: auto;
-}
-
-.nav-bar>button {
-  margin: 0;
-  margin-right: 20px;
-  width: 250px;
-  border: none;
-  text-wrap: break-word;
-  padding: 5px -50px 5px;
-}
-
 
 
 /* chat component */
