--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -113,8 +113,6 @@
     padding: 5px;
   }
 
-  .header_content h1 {}
-
   .sign-in {
     width: 100%;
   }
@@ -123,14 +121,4 @@
     font-size: 12px;
   }
 
-  .nav-bar button {
-    width: 100px;
-    padding: 6px;
-    position: absolute;
-    right: 0;
-  }
-
-  .nav-bar button>p {
-    display: none;
-  }
 }
